# aria-agent

./: .env.example  .env.termux  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  codex-architecture-study-2026-06.md  design-decisions.md  failure-modes.md  implementation_plan.md  integrations-model-selector.md  roadmap.md  security.md  termux-compat.md
examples/: run_demo.py
integrations/: README.md  aria_cmd.py  aria_opencode.py  hermes_aria_tool.py
integrations/hermes_model_provider/aria/: __init__.py  plugin.yaml
scripts/: aria-serve.sh  install-termux.sh
src/aria_agent/: __init__.py  agent.py  agents.py  approvals.py  config.py  costs.py  main.py  memory.py  tools.py  worker.py
src/aria_agent/builtin_tools/: calculator.py  file_reader.py
src/aria_agent/cooperation/: __init__.py  base.py  cascade.py  ensemble.py  plan_execute.py
src/aria_agent/providers/: __init__.py  base.py  minimax.py  openai_codex.py  openai_compatible.py  opencode_go.py  registry.py  zen.py
src/aria_agent/router/: __init__.py  classifier.py  routing_table.py  selector.py
src/aria_agent/subagents/: __init__.py  base.py  orchestrator.py  registry.py
src/hermes/: agents.py  main.py  memory.py  tracing.py  worker.py
src/hermes/builtin_tools/: __init__.py  email_draft.py  task_creator.py  (+1 more)
tests/: test_agent.py  test_agents.py  test_api.py  test_approvals.py  test_cooperation.py  test_core.py  test_integrations.py  test_memory.py  test_providers.py  test_router.py  test_subagents.py  test_termux_compat.py  test_tools.py
