[project]
name = "aria-agent"
version = "0.4.0"
description = "Cross-provider model router with cooperation patterns, v0.1 tool agent preserved, and v0.4 sub-agents (planner, architect, implementer, debugger, documenter, reviewer, tester, validator, researcher) with role-specific model delegation. Includes an Orchestrator for parallel and sequential sub-agent dispatch."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
